# swift-bep-parser

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod
.bcr/: metadata.template.json
.github/workflows/: create_release.yml  generate_release_notes.sh  tests.yml  xcode_select.sh
BuildEventProtocol/: BUILD.bazel
BuildEventService/: BUILD.bazel
Sources/: SwiftBEPParser.swift
SwiftBEPParser/: BUILD.bazel
SwiftBEPParser/Sources/: BUILD.bazel  SwiftBEPParser.swift
SwiftBEPParser/Tests/: BUILD.bazel  Info.plist  SwiftBEPParserTests.swift
Tests/: SwiftBEPParserTests.swift
Tests/fixtures/: macos_build_failure.bep  macos_build_success.bep
tools/: non_bzlmod_enabled_deps.bzl  repositories.bzl  shared.bzl
tools/patches/: 0001-Make-build_event_stream_proto-public-visibility.patch  0002-Add-swift-build-proto.patch
