load(
    "@rules_xcodeproj//xcodeproj:defs.bzl",
    "top_level_target",
    "xcodeproj",
)

package(default_visibility = ["@rules_xcodeproj//xcodeproj:generated"])

# Xcode

xcodeproj(
    name = "xcodeproj",
    project_name = "swift-bep-parser",
    top_level_targets = [
        top_level_target(
            "//SwiftBEPParser:SwiftBEPParserTests",
        ),
        top_level_target(
            "//BuildEventServiceServer",
        ),
    ],
)

# tools

genrule(
    name = "lint",
    srcs = [],
    outs = ["lint.sh"],
    cmd = """
echo "set -e" > "$@"
echo "./$(location @buildifier_prebuilt//:buildifier) -lint fix -mode fix -r \\$$BUILD_WORKSPACE_DIRECTORY" >> "$@"
echo "./$(location @SwiftLint//:swiftlint) --fix \\$$BUILD_WORKSPACE_DIRECTORY" >> "$@"
""",
    executable = True,
    tools = [
        "@SwiftLint//:swiftlint",
        "@buildifier_prebuilt//:buildifier",
    ],
)
