load(
    "@rules_xcodeproj//xcodeproj:defs.bzl",
    "top_level_target",
    "xcodeproj",
)

# Xcode

xcodeproj(
    name = "xcodeproj",
    project_name = "swift-bep-parser",
    top_level_targets = [
        top_level_target(
            "//SwiftBEPParser/Tests:SwiftBEPParserTests",
        ),
    ],
)

# tools

genrule(
    name = "lint",
    srcs = [],
    outs = ["lint.sh"],
    cmd = """
echo "set -e" > "$@"
echo "./$(location @buildifier_prebuilt//:buildifier) -lint fix -mode fix -r \\$$BUILD_WORKSPACE_DIRECTORY" >> "$@"
echo "./$(location @swiftlint//:swiftlint) --fix \\$$BUILD_WORKSPACE_DIRECTORY" >> "$@"
""",
    executable = True,
    tools = [
        "@buildifier_prebuilt//:buildifier",
        "@swiftlint",
    ],
)
