load(
    "@build_bazel_rules_swift//proto:proto.bzl",
    "swift_proto_library",
)
load(
    "@build_bazel_rules_swift//swift:swift.bzl",
    "swift_module_alias",
)

# This is public API for the repository.
package(default_visibility = ["//visibility:public"])

swift_proto_library(
    name = "build_event_stream_proto_swift_internal",
    protos = [
        "@io_bazel//src/main/java/com/google/devtools/build/lib/buildeventstream/proto:build_event_stream_proto",
    ],
    visibility = ["//visibility:public"],
)

# Rename the Swift module so we can use `import build_event_stream_proto` instead
# of the more complex:
#    import src_main_java_com_google_devtools_build_lib_buildeventstream_proto_build_event_stream_proto
swift_module_alias(
    name = "build_event_stream_proto_swift",
    module_name = "BuildEventProtocol_build_event_stream_proto",
    visibility = ["//visibility:public"],
    deps = [":build_event_stream_proto_swift_internal"],
)
