load(
    "@build_bazel_rules_swift//swift:swift.bzl",
    "swift_grpc_library",
    "swift_proto_library",
)

# This is public API for the repository.
package(default_visibility = ["//visibility:public"])

alias(
    name = "build_proto",
    actual = "@com_google_googleapis//google/devtools/build/v1:publish_build_event_proto",
)

swift_grpc_library(
    name = "build_proto_server_services_swift",
    srcs = [":build_proto"],
    flavor = "server",
    deps = [":build_proto_swift"],
)

swift_proto_library(
    name = "build_proto_swift",
    deps = [":build_proto"],
)
