load(
    "@build_bazel_rules_apple//apple:macos.bzl",
    "macos_unit_test",
)
load(
    "@build_bazel_rules_apple//apple:resources.bzl",
    "apple_resource_bundle",
)
load(
    "@build_bazel_rules_swift//swift:swift.bzl",
    "swift_library",
)
load("//tools:shared.bzl", "versions")

package(default_visibility = ["@rules_xcodeproj//xcodeproj:generated"])

swift_library(
    name = "SwiftBEPParser",
    srcs = glob(["Sources/**"]),
    module_name = "SwiftBEPParser",
    deps = [
        "//BuildEventProtocol:build_event_stream_proto_swift",
    ],
)

apple_resource_bundle(
    name = "SwiftBEPParserTestsResources",
    infoplists = [":Tests/Info.plist"],
    resources = glob(["Tests/fixtures/**"]),
)

swift_library(
    name = "SwiftBEPParserTestsLib",
    testonly = True,
    srcs = glob(["Tests/**/*.swift"]),
    module_name = "SwiftBEPParserTests",
    deps = [
        ":SwiftBEPParser",
        ":SwiftBEPParserTestsResources",
    ],
)

macos_unit_test(
    name = "SwiftBEPParserTests",
    bundle_id = "com.mattrobmattrob.swift-bep-parser-tests",
    minimum_os_version = versions.minimum_macos_version,
    deps = [":SwiftBEPParserTestsLib"],
)
