load(
    "@build_bazel_rules_swift//swift:swift.bzl",
    "swift_library",
)

swift_library(
    name = "SwiftBEPParser",
    srcs = glob(["**/*.swift"]),
    module_name = "SwiftBEPParser",
    visibility = ["//visibility:public"],
    deps = [
        "//BuildEventProtocol:build_event_stream_proto_swift",
    ],
)
